[tool.poetry]
name = "django-post-later"
version = "0.1.0"
description = """A simple django app for scheduling posts for Twitter, Mastodon, and others."""
authors = ["Daniel Andrlik <daniel@andrlik.org>"]
license = "BSD"
readme = "README.md"
repository = "https://github.com/andrlik/django-post-later"
homepage = "https://github.com/andrlik/django-post-later"
classifiers = [
    "Framework :: Django :: 4",
    "Framework :: Django",
]
documentation = "https://andrlik.github.io/django-post-later/"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
rules = "^3.3.0"

django-easy-logging = {version = "^0.4.0", optional=true}

djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
drf-spectacular = "^0.25.1"
mastodon-py = "^1.5.2"
tweepy = {extras = ["async"], version = "^4.12.1"}
httpx = "^0.23.0"
pillow = "^9.3.0"
django-stubs-ext = "^0.7.0"
django-model-utils = "^4.2.0"


[tool.poetry.dev-dependencies]
bandit = "^1.7.2"
darglint = "^1.8.0"
Werkzeug = {extras = ["watchdog"], version = "^2.0.2"}
ipdb = "^0.13.9"
psycopg2-binary = "^2.9.3"
watchgod = "^0.8"
mypy = "^0.991"
mypy-extensions = "^0.4.3"
pydocstyle = "^6.1.1"
pylint = "^2.10.2"
pyupgrade = "^3.2.0"
safety = "^2.3.1"
django-stubs = "^1.13.0"
pytest = "^7.2.0"
pytest-sugar = "^0.9.6"
djangorestframework-stubs = "^1.7.0"

flake8 = "^5.0.4"
flake8-isort = "^5.0.0"
coverage = "^6.3.1"
black = {extras = ["d"], version = "^22.1.0"}
pylint-django = "^2.5.0"
pre-commit = "^2.17.0"
django-debug-toolbar = "^3.2.4"
django-extensions = "^3.1.5"
django-coverage-plugin = "^2.0.2"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"
django-easy-logging = "^0.4.0"

mkdocs = "^1.4.2"
mkdocs-material = "^8.5.9"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-include-markdown-plugin = "^3.9.1"
colorama = "^0.4.4"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"
types-setuptools = "^65.5.0.2"
pytest-httpx = "^0.21.2"
responses = "^0.22.0"
respx = "^0.20.1"
pytest-asyncio = "^0.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | migrations
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true
skip_glob = "**/migrations/*.py"

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.11
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]



[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "tests.django_settings"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
testpaths = ["tests", "post_later"]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__", ".venv"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "--cov=post_later",
  "--cov-report=term-missing", "--ds=tests.django_settings",
    "--reuse-db",
]

[tool.coverage.run]
source = ["post_later"]
omit = ["*migrations*", "*tests*", "*staticfiles*"]
plugins = ["django_coverage_plugin"]
